--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,6 @@
 html{
   text-align: center;
+  background-color: black;
 }
 .spes{
   font-family: Verdana;
@@ -23,4 +24,10 @@ p{
 }
 h3{
   text-align: right !important;
+}
+.typ{
+  font-family: Verdana;
+  font-size: 42px;
+  font-weight: 300;
+  color: white;
 }
